# ariac_environment

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
launch/: ariac_p3dx_actor3x.launch  ariac_p3dx_fakeloc_rviz.launch  ariac_world.launch  bagging.launch  gmapping.launch  make_map.launch  obstacle_p3dx_in_ariac_world.launch  p3dx_in_ariac_world.launch  rviz.launch  teleop_f720.launch  teleop_keyboard.launch  upload_actor.xml  upload_pioneer3dx.xml
map/: ariac.pgm  ariac.yaml  ariac_map.yaml
maps/: ariac.yaml
models/actor/: model.sdf
models/ariac/: model.sdf
models/custom_hokuyo/: model-1_2.sdf
models/hokuyo/: hokuyo.xacro
models/obstacle/: model.sdf
models/obstacle/meshes/: actor.dae
models/obstacle/scripts/: move_obstacle.py
models/p3dx_with_sensors/: pioneer3dx.xacro
models/pioneer_sensor_model/defs/: pioneer3dx.xacro  pioneer3dx_body.xacro
models/pioneer_sensor_model/launch/: upload_pioneer3dx.xml
rviz/: localization.rviz
scripts/: move_object.py
worlds/: ariac.world
